--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="d3.css">
+    <title>D3 Visual</title>
+  </head>
+
+  <body>
+    <div class="info">
+      <h1>Nederlandse J.K. Rowling en J.R.R. Tolkien boeken en aantal pagina's</h1>
+      <div class="legenda">
+        <h3>J.K. Rowling</h3>
+        <div class="block jk"></div>
+        <h3>J.R.R. Tolkien</h3>
+        <div class="block tk"></div>
+      </div>
+    </div>
+
+    <div id="vis">
+    </div>
+
+
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script type="text/javascript" src="d3.js"></script>
+  </body>
+
+</html>
