--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="d3.css">
+    <link rel="stylesheet" href="assets/d3.css">
     <title>D3 Visual</title>
   </head>
 
@@ -22,7 +22,7 @@
 
 
     <script src="https://d3js.org/d3.v5.min.js"></script>
-    <script type="text/javascript" src="d3.js"></script>
+    <script type="text/javascript" src="js/d3.js"></script>
   </body>
 
 </html>
