--- a/frontend-data/index.html
+++ b/frontend-data/index.html
@@ -10,7 +10,7 @@
       <div id="dropdown">
       </div>
 
-    <!-- <p>Stripboeken in de OBA opgedeeld in orginele taal</p> -->
+    <p>Stripboeken in de OBA opgedeeld in orginele taal</p>
     <div id="vis">
 
     </div>
