--- a/cssttr/index.html
+++ b/cssttr/index.html
@@ -1,321 +1,86 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8" />
-	<title>Russ & Daughters</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/styles.css">
-	<!-- SUGGESTIONS FOR STYLING
-	https://duckduckgo.com/?q=beautiful+restaurant+menus&t=ffab&iax=images&ia=images
--->
+    <meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=-1">
+    <link href="https://fonts.googleapis.com/css?family=Dosis:400,700" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
+    <title>Russ & Daughters</title>
+</head>
+
 <body class="body">
 
-<header class="header">
-	<h1 class="h1"><span>Russ</span> <span>&</span> <span>Daughters</span></h1>
-	<p class="p">appetizing since 1924</p>
-</header>
+	<main class="menu">
 
-<main class="main">
+			<header class="header">
+				<h1 class="title nopadding nomargin"><span>Russ</span> <span>&</span> <span>Daughters</span></h1>
+				<p class="subtitle nopadding">appetizing since 1924</p>
+			</header>
 
-<section class="section">
-	<header class="header header-dishes">
-		<h2 class="h2">noshes</h2>
-		<p class="p">small dishes</p>
-	</header>
+			<section class="section section-eggs">
+				<div class="container">
+					<header class="header-dish">
+						<h2 class="title-dish nopadding nomargin">eggs</h2>
+						<p class="subtitle-dish nopadding nomargin">served all the time</p>
+					</header>
+				</div>
+			</section>
 
-<!-- 	<article>
-		<h3>Russ &amp;  Daughters Knishes</h3>
-		<p>Potato, carmelized onion, mustard</p>
-		<div>8</div>
-	</article>
+			<section class="section section-noshes">
+				<div class="container">
+				<header class="header-dish">
+					<h2 class="title-dish nopadding nomargin">noshes</h2>
+					<p class="subtitle-dish nopadding nomargin">small dishes</p>
+				</header>
+			</div>
+			</section>
 
-	<article>
-		<h3>Hot Smoke/Cold Smoke</h3>
-		<p>Kippered baked Salmon &amp; Scottish smoked salmon spread, waffle-cut potato chips</p>
-		<div>13</div>
-	</article>
+			<section class="section section-platters">
+				<div class="container">
+				<header class="header-dish">
+					<h2 class="title-dish nopadding nomargin">platters</h2>
+					<p class="subtitle-dish nopadding nomargin">here to share</p>
+				</header>
+			</div>
+			</section>
 
-	<article>
-		<h3>Potato latkes</h3>
-		<p>Salmon roe and creme fraiche</p>
-		<div>13</div>
-	</article>
+			<section class="section section-soup">
+				<div class="container">
+				<header class="header-dish">
+					<h2 class="title-dish nopadding nomargin">soup</h2>
+					<p class="subtitle-dish nopadding nomargin">slirp it, we like that</p>
+				</header>
+			</div>
+			</section>
 
-	<article>
-		<h3>Kasha Varnishkas</h3>
-		<p>buckwheat, caramelized onion, bowtie egg noodles</p>
-	</article>
+			<section class="section section-salads">
+				<div class="container">
+				<header class="header-dish">
+					<h2 class="title-dish nopadding nomargin">salads</h2>
+					<p class="subtitle-dish nopadding nomargin">collard greens</p>
+				</header>
+			</div>
+			</section>
 
-	<article>
-		<h3>Chopped liver</h3>
-		<p>Matzo, pickled red onion</p>
-		<div>9</div>
-	</article>
+			<section class="section section-boards">
+				<div class="container">
+				<header class="header-dish">
+					<h2 class="title-dish nopadding nomargin">boards</h2>
+					<p class="subtitle-dish nopadding nomargin">open-faced sandwiches</p>
+				</header>
+			</div>
+			</section>
 
-	<article>
-		<h3>Super heebster</h3>
-		<p>whitefish &amp; baked salmon salad, wasabi-infused fish roe, horseradish dill cream cheese, bagel toast</p>
-		<div>10</div>
-	</article>
+			<section class="section section-sweet">
+				<div class="container section-sweet">
+				<header class="header-dish">
+					<h2 class="title-dish nopadding nomargin">sweet</h2>
+					<p class="subtitle-dish nopadding nomargin">dessert, but different</p>
+				</header>
+			</div>
+			</section>
 
-	<article>
-		<h3>Pastrami Russ</h3>
-		<p>pastrami-cured salmon, muenster cheese, sauerkraut, mustard, pickle, pretzel roll</p>
-		<div>12</div>
-	</article>
-
-	<article>
-		<h3>sours</h3>
-		<p>pickled vegetables, pickles from the barrel</p>
-		<div>7</div>
-	</article> -->
-</section>
-
-
-<section class="section">
-	<header class="header">
-		<h2 class="h2">boards</h2>
-		<p class="p">open-faced sandwiches</p>
-	</header>
-<!--
-	<article>
-		<h3>the classic</h3>
-		<p>gaspe nova smoked salmon, cream cheese, bagel-bialy, tomato, onion, capers</p>
-		<div>16</div>
-	</article>
-
-	<article>
-		<h3>mensch</h3>
-		<p>sturgeon, butter, bagel/bialy, tomato, onion, capers</p>
-		<div>22</div>
-	</article>
-
-	<article>
-		<h3>shtetl</h3>
-		<p>smoked sable, goat cream cheese, bagel-bialy, tomato, onion, capers</p>
-		<div>18</div>
-	</article>
-
-	<article>
-		<h3>yum kippered</h3>
-		<p>kippered (baked) salmon, cream cheese, bagel/bialy, tomato, onion, capers</p>
-		<div>16</div>
-	</article> -->
-</section>
-
-
-<section class="section">
-	<header class="header">
-		<h2 class="h2">platters</h2>
-		<p class="p">here to share</p>
-	</header>
-<!--
-	<article>
-		<h3>smoked fish</h3>
-		<p><em>Serves 3 - 4 people</em> with cream cheese, onion, tomato, capers &amp; new potato salad and Russ &amp; daughters bread basket</p>
-	</article>
-
-	<article>
-		<h3>the hattie</h3>
-		<p>smoked whitefish, kippered (baked) salmon, gaspe nova smoked salmon, sable</p>
-		<div>80</div>
-	</article>
-
-	<article>
-		<h3>the ida</h3>
-		<p>scottish smoked salmon, gaspe nova smoked salmon, pastrami-cured salmon, gravlox</p>
-		<div>70</div>
-	</article>
-
-	<article>
-		<h3>the anne</h3>
-		<p>western nova smoked salmon, private stock sturgeon, sable, smoked brook trout, wild alaskan salmon roe</p>
-		<div>90</div>
-	</article> -->
-
-</section>
-
-
-<section class="section">
-	<header class="header">
-		<h2 class="h2">eggs</h2>
-		<p class="p">served all the time</p>
-	</header>
-<!--
-	<blockquote>
-		<p>"Ess gezinter hayt."</p>
-		<p>Eat in good health.</p>
-		<cite>— Yiddish idiom</cite>
-	</blockquote>
-
-	<article>
-		<h3>Lox, eggs &amp; onions</h3>
-		<p>with toasted shissel rye</p>
-		<div>15</div>
-	</article>
-
-	<article>
-		<h3>sturgeon, eggs &amp; onion</h3>
-		<p>with toasted pumpernickel</p>
-		<div>19</div>
-	</article>
-
-	<article>
-		<h3>bella's matzo brei</h3>
-		<p>matzo, egg, applesauce, sour cream</p>
-		<div>12</div>
-	</article>
-
-	<article>
-		<h3>lower sunny side</h3>
-		<p>sunny side up eggs, gaspe nova smoked salmon, potato latkes</p>
-		<div>16</div>
-	</article>
-
-	<article>
-		<h3>eggs benny</h3>
-		<p>poached eggs, scottish smoked salmon, sautéed spinach, hollandaise, challah</p>
-		<div>18</div>
-	</article>
-
-	<article>
-		<h3>farm egg omelette</h3>
-		<p>gaspe nova smoked salmon, cream cheese</p>
-		<div>15</div>
-	</article>
-
-	<article>
-		<h3>soft scrambled eggs &amp; caviar</h3>
-		<p>custard-like egg, caviar with challah</p>
-		<div>180</div>
-	</article> -->
-
-</section>
-
-
-<section class="section">
-	<header class="header">
-		<h2 class="h2">soup</h2>
-		<p class="p">slirp it, we like that</p>
-	</header>
-<!--
-	<article>
-		<h3>Matzo Ball</h3>
-		<p>chicken, vegetables, matzo ball</p>
-		<div>8</div>
-	</article>
-
-	<article>
-		<h3>Mushroom Barley</h3>
-		<p>mushrooms, barley with shissel rye bread</p>
-		<div>8</div>
-	</article>
-
-	<article>
-		<h3>Borscht</h3>
-		<p>served chilled: beets, sour cream, dill with pumpernickel</p>
-		<div>8</div>
-	</article>
-
-	<article>
-		<h3>Smoked Whitefish Chowder</h3>
-		<p>dill, esplette pepper, matzo</p>
-		<div>10</div>
-	</article> -->
-
-</section>
-
-<section class="section">
-	<header class="header">
-		<h2 class="h2">salads</h2>
-		<p class="p">collard greens</p>
-	</header>
-
-<!-- 	<article>
-		<h3>Mixed Green<div>9</div></h3>
-		<p>greens, fennel, dill, capers, citrus dressing</p>
-	</article>
-
-	<article>
-		<h3>Chopped Salad<div>14</div></h3>
-		<p>smoked whitefish, avocado, beets, egg, apple, mixed greens, matzo, buttermilk dressing</p>
-	</article>
-
-	<article>
-		<h3>Smoked Trout& Potato</h3>
-		<p>smoked trout, watercress, caper mustard dressing</p>
-		<div>14</div>
-	</article> -->
-
-</section>
-
-
-<section class="section">
-	<header class="header">
-		<h2 class="h2">sweet</h2>
-		<p class="p">dessert, but different</p>
-	</header>
-
-<!-- 	<blockquote>
-		<p>"A moltsayt on a tsimes iz via a mayse on a moshl."</p>
-		<p>A meal without a sweet dish is like a story without a moral.</p>
-		<cite>— Yiddish idiom</cite>
-	</blockquote>
-
-
-	<article>
-		<h3>blintzes</h3>
-		<p>fruit compote, sour cream</p>
-		<div>8</div>
-	</article>
-
-	<article>
-		<h3>babka french toast</h3>
-		<p>chocolate babka, sour cream, berries</p>
-		<div>10</div>
-	</article>
-
-	<article>
-		<h3>noodle kugel</h3>
-		<p>farmer cheese, raisins, egg noodles</p>
-		<div>7</div>
-	</article>
-
-	<article>
-		<h3>challah bread pudding</h3>
-		<p>dried apricots, caramel sauce</p>
-		<div>9</div>
-	</article>
-
-	<article>
-		<h3>halvah ice cream</h3>
-		<p>halvah, sesame, salted caramel</p>
-		<div>8</div>
-	</article>
-
-	<article>
-		<h3>grandpa's grapefruit</h3>
-		<p>grapefruit, white germ, maple syrup</p>
-		<div>6</div>
-	</article>
-
-	<article>
-		<h3>baked farmer cheese</h3>
-		<p>blueberry, walnut &amp; honey with pumpernickel</p>
-		<div>7</div>
-	</article>
-
-	<article>
-		<h3>cookie plate</h3>
-		<p>Russ &amp; daughters cookies &amp; sweets</p>
-		<div>8</div>
-	</article> -->
-
-</section>
-
-</main>
-
-<!-- HTML taken and adjusted from https://codepen.io/julesforrest/pen/VqXvgQ -->
+	</main>
 
 </body>
 </html>
