new site, who dis?

--- a/cssttr/index.html
+++ b/cssttr/index.html
@@ -9,16 +9,16 @@
 
 <body class="root">
 
-  <input class="switch switch--sunny" type="checkbox" checked>
+  <input class="switch switch--sunny" name="switch" type="radio">
   <label class="switch__label">Sunny</label>
 
-  <input class="switch switch--rainy" type="checkbox">
+  <input class="switch switch--rainy" name="switch" type="radio">
   <label class="switch__label">Rainy</label>
 
-  <input class="switch switch--cloudy" type="checkbox">
+  <input class="switch switch--cloudy" name="switch" type="radio">
   <label class="switch__label">Cloudy</label>
 
-  <input class="switch switch--stormy" type="checkbox">
+  <input class="switch switch--stormy" name="switch" type="radio">
   <label class="switch__label">Stormy</label>
 
 	<main class="menu">
