--- a/wafs/index.html
+++ b/wafs/index.html
@@ -7,19 +7,13 @@
     <title>Studio Ghibli</title>
   </head>
 
-  <body class="body">
+  <body>
 
-    <header class="header">
-      <a href="/week1/"><img class="logo" src="css/assets/logo.png" alt="logo"></a>
+    <header>
+      <a href="/src/"><img class="logo" src="css/assets/logo.png" alt="logo"></a>
     </header>
-
     <main id="main" class="main">
-
     </main>
-
-    <footer class="footer">
-      <img class="logo logo-footer" src="css/assets/puppets.png" alt="puppets">
-    </footer>
 
     <script type="text/javascript" src="js/app.js"></script>
   </body>
