--- a/wafs/src/index.html
+++ b/wafs/src/index.html
@@ -10,7 +10,7 @@
   <body>
 
     <header>
-      <a href="/src/"><img class="logo" src="css/assets/logo.png" alt="logo"></a>
+      <a href="/wafs/src/"><img class="logo" src="css/assets/logo.png" alt="logo"></a>
     </header>
     <main id="main" class="main">
     </main>
